CVS
- Added ingres_set_environment() [grantc 02-09-05]
- Fixed ingres_connect() to allow locale params to function without a cast [grantc 01-09-05]
- Extension now builds with GCC 4.x [grantc 29-08-05]
- Added parameter support to ingres_query(), uses '?' for param markers [grantc 23-08-05]

version 1.1
- Added support for a number of connection options [grantc 30-06-05]
- Added Mode support to cursor selects [grantc 28-06-05]
- Added named parameter support to database procedures [grantc 27-06-05] 
- Added support for procedures without parameters. Handles row producing
procedures [grantc 23-06-05]
- No longer EXPERIMENTAL [grantc 15-06-05]
- Added functions ingres_prepare(), ingres_execute(), ingres_cursor() [grantc 15-06-05]
- Added some simple tests [grantc 15-06-05]
- Added CHANGELOG to keep better track of changes [grantc 30-05-05]
- Added support for reporting/testing Ingres error messages [grantc 30-05-05]

version 1.0
- Corrected config files to allow building under UNIX [grantc 25-05-05]
- Corrected username [grantc 25-05-05]
- Added the ability to do PECL package builds [grantc 25-05-05]
- Code moved from /php-src/ext/ingres_ii to /pecl/ingres [derick 23-05-05]

pre-pecl
- Fixed bug #30593 - pthread linking problems . [grantc 23-05-05]